--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
 </head>
 
 <body ng-app='myApp'>
-
 <nav class="navbar navbar-inverse navbar-static-top">
   <div class="container-fluid">
     <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> 
+      </button>
       <a class="navbar-brand" href="#">立群好朋友的很新二手書</a>
     </div>
-    <div>
+    <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav pull-right">
         <li><a href="#" data-toggle="modal" data-target="#myModal">About</a></li>
       </ul>
@@ -26,34 +30,32 @@
   </div>
 </nav>
 
-<div class="container">
-  <div ng-controller="BookCarouselCtrl" id="slides_control" ng-init='load()'>
-    <div>
-      <carousel interval="myInterval">
-        <slide ng-repeat="book in books" active="book.active">
-          <img ng-src="{{book.image}}">
-          <div class="carousel-caption">
+<div>
+  <div ng-controller="BookCarouselCtrl" ng-init='load()'>
+    <carousel interval="myInterval">
+      <slide ng-repeat="book in books" active="book.active">
+        <img ng-src="{{book.image}}">
+        <div class="carousel-caption">
+          <div class="hidden-xs">
             <h2>{{book.title}}</h2>
             <hr /> 
-            <h3>作者: {{book.author}}</h3>
+            <h4>作者: {{book.author}}</h4>
             <h4>ISBN: {{book.isbn}}</h4>
-            <h4>{{book.buyDate}} 從 {{book.buySource}} 購入</h3>
+            <h4>{{book.buyDate}} 從 {{book.buySource}} 購入</h4>
             <h4>博客來連結: <a href="{{book.link}}" target="_blank"><span class="glyphicon glyphicon-search"></span></a></h4>
             <hr />
-            <h4>註解: {{book.comment}}</h4>
-            <h1><strike>原價: {{book.originPrice}}</strike> 朋友價: {{book.price}} <span class="label label-danger">{{book.discount}}% Off!</span></h1>
+            <h4>註解: {{book.comment}}</h4>  
           </div>
-        </slide>
-      </carousel>
-    </div>
+          
+          <h1><strike>原價: {{book.originPrice}}</strike> 朋友價: {{book.price}} <span class="label label-danger">{{book.discount}}% Off!</span></h1>
+        </div>
+      </slide>
+    </carousel>
   </div>
 </div>
 
-<!-- Modal -->
-<div id="myModal" class="modal fade" role="dialog">
+<div id="myModal" class="modal fade" role="dialog" tabindex="-1">
   <div class="modal-dialog">
-
-    <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
