--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <title>賣書摟</title>
 
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Noto">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/custom.css">
 
@@ -47,7 +48,7 @@
             <h4>註解: {{book.comment}}</h4>  
           </div>
           
-          <h1><strike>原價: {{book.originPrice}}</strike> 朋友價: {{book.price}} <span class="label label-danger">{{book.discount}}% Off!</span></h1>
+          <h1><strike>原價: {{book.originPrice}}</strike>&nbsp;&nbsp;朋友價: {{book.price}}&nbsp;&nbsp;<span class="label label-danger">{{book.discount}}% Off!</span></h1>
         </div>
       </slide>
     </carousel>
