--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
   <meta charset='utf-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>賣書摟</title>
+  <title>立群好朋友的很新二手書</title>
+
+  <meta property="og:title" content="立群好朋友的很新二手書" />
+  <meta property="og:type" content="article" />
+  <meta property="og:image" content="favicon.ico" />
+  <meta property="og:url" content="http://asoul.github.io/sellbook/" />
+  <meta property="og:description" content="簡單來說就很新的二手書打六折賣" />
+
+  <link rel="icon" type="image/ico" href="favicon.ico">
 
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/custom.css">
