facebook og:image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <meta property="og:title" content="立群好朋友的很新二手書" />
   <meta property="og:type" content="article" />
-  <meta property="og:image" content="favicon.ico" />
+  <meta property="og:image" content="http://asoul.github.io/sellbook/favicon.ico" />
   <meta property="og:url" content="http://asoul.github.io/sellbook/" />
   <meta property="og:description" content="簡單來說就很新的二手書打六折賣" />
 
