remove space between label

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <img ng-src="{{book.image}}">
         <div class="carousel-caption">
           <div class="hidden-xs">
-            <h2><span class="label label-success">{{book.greenLabel}}</span>&nbsp;<span class="label label-info">{{book.blueLabel}}</span>&nbsp;<span class="label label-warning">{{book.orangeLabel}}</span>&nbsp;<span class="label label-danger">{{book.redLabel}}</span></h2>
+            <h2><span class="label label-success">{{book.greenLabel}}</span><span class="label label-info">{{book.blueLabel}}</span><span class="label label-warning">{{book.orangeLabel}}</span><span class="label label-danger">{{book.redLabel}}</span></h2>
             <h2>{{book.title}}</h2>
             <hr /> 
             <h4>作者: {{book.author}}</h4>
