--- a/index.html
+++ b/index.html
@@ -19,72 +19,77 @@
 
 </head>
 
-<body ng-app='myApp'>
-<nav class="navbar navbar-inverse navbar-static-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span> 
-      </button>
-      <a class="navbar-brand" href="#">立群好朋友的很新二手書</a>
+<body ng-app='myApp' ng-controller="BookCarouselCtrl">
+<div id="loadingDiv" ng-style="loadingDivStyle">
+  <h2>歡迎大家多多捧場 ヽ(✿ﾟ▽ﾟ)ノ</h2>
+  <img src="img/ogimage.jpg" alt="讀取中">
+</div>
+<div id="content" ng-style="contentStyle">
+  <nav class="navbar navbar-inverse navbar-static-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span> 
+        </button>
+        <a class="navbar-brand" href="#">立群好朋友的很新二手書</a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav pull-right">
+          <li><a href="#" data-toggle="modal" data-target="#myModal">About</a></li>
+        </ul>
+      </div>
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav pull-right">
-        <li><a href="#" data-toggle="modal" data-target="#myModal">About</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+  </nav>
 
-<div>
-  <div ng-controller="BookCarouselCtrl" ng-init='load()'>
-    <carousel interval="myInterval">
-      <slide ng-repeat="book in books" active="book.active">
-        <img ng-src="{{book.image}}">
-        <div class="carousel-caption">
-          <div class="hidden-xs">
-            <h2><span class="label label-success">{{book.greenLabel}}</span><span class="label label-info">{{book.blueLabel}}</span><span class="label label-warning">{{book.orangeLabel}}</span><span class="label label-danger">{{book.redLabel}}</span></h2>
-            <h2>{{book.title}}</h2>
-            <hr /> 
-            <h4>作者: {{book.author}}</h4>
-            <h4>ISBN: {{book.isbn}}</h4>
-            <h4>{{book.buyDate}} 從 {{book.buySource}} 購入</h4>
-            <h4>博客來連結: <a href="{{book.link}}" target="_blank"><span class="glyphicon glyphicon-search"></span></a></h4>
-            <hr />
-            <h4>註解: {{book.comment}}</h4>  
-            <hr />
+  <div>
+    <div ng-init='load()'>
+      <carousel interval="myInterval">
+        <slide ng-repeat="book in books" active="book.active">
+          <img ng-src="{{book.image}}">
+          <div class="carousel-caption">
+            <div class="hidden-xs">
+              <h2><span class="label label-success">{{book.greenLabel}}</span><span class="label label-info">{{book.blueLabel}}</span><span class="label label-warning">{{book.orangeLabel}}</span><span class="label label-danger">{{book.redLabel}}</span></h2>
+              <h2>{{book.title}}</h2>
+              <hr /> 
+              <h4>作者: {{book.author}}</h4>
+              <h4>ISBN: {{book.isbn}}</h4>
+              <h4>{{book.buyDate}} 從 {{book.buySource}} 購入</h4>
+              <h4>博客來連結: <a href="{{book.link}}" target="_blank"><span class="glyphicon glyphicon-search"></span></a></h4>
+              <hr />
+              <h4>註解: {{book.comment}}</h4>  
+              <hr />
+            </div>
+            
+            <h1><strike>原價: {{book.originPrice}}</strike>&nbsp;&nbsp;朋友價: {{book.price}}&nbsp;&nbsp;<span class="label label-danger">{{book.discount}}% Off!</span></h1>
           </div>
-          
-          <h1><strike>原價: {{book.originPrice}}</strike>&nbsp;&nbsp;朋友價: {{book.price}}&nbsp;&nbsp;<span class="label label-danger">{{book.discount}}% Off!</span></h1>
-        </div>
-      </slide>
-    </carousel>
-  </div>
-</div>
-
-<div id="myModal" class="modal fade" role="dialog" tabindex="-1">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">關於立群好朋友的很新二手書</h4>
-      </div>
-      <div class="modal-body">
-        <p>我還蠻愛看新書的，只是不喜歡把書留下來，看完的書通常都很新，所以想把這些書拿出來賣。</p>
-        <p>書都打六折賣左右，如果覺得太貴還是可以跟我說，註解有些有寫對書的評論，有些我還在看想買的話也可以先跟我說 <span class="glyphicon glyphicon-thumbs-up"></span></p>
-        <p>要買的話就跟我說吧，我平常會在板橋到永和出沒，要去台大或新竹的話也可以另外約。</p>
-        <p>感謝大家 &#60;&#40;&#95;&#95;&nbsp;&#95;&#95;&#41;&#62;</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
-      </div>
+        </slide>
+      </carousel>
     </div>
+  </div>
 
+  <div id="myModal" class="modal fade" role="dialog" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">關於立群好朋友的很新二手書</h4>
+        </div>
+        <div class="modal-body">
+          <p>我還蠻愛看新書的，只是不喜歡把書留下來，看完的書通常都很新，所以想把這些書拿出來賣。</p>
+          <p>書都打六折賣左右，如果覺得太貴還是可以跟我說，註解有些有寫對書的評論，有些我還在看想買的話也可以先跟我說 <span class="glyphicon glyphicon-thumbs-up"></span></p>
+          <p>要買的話就跟我說吧，我平常會在板橋到永和出沒，要去台大或新竹的話也可以另外約。</p>
+          <p>感謝大家 &#60;&#40;&#95;&#95;&nbsp;&#95;&#95;&#41;&#62;</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+
+    </div>
   </div>
 </div>
-
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.js"></script>
 <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular-animate.js"></script>
